2008-08-05  Chong Yidong  <cyd@stupidchicken.com>

	* kmacro.el (kmacro-exec-ring-item): Add autoload.

	* files.el (auto-save-visited-file-name): Move definition to
	fileio.c.

	* cus-start.el (all): Handle auto-save-visited-file-name.

2008-08-05  Alex Shinn  <alexshinn@gmail.com>  (tiny change)

	* files.el (hack-one-local-variable-eval-safep): Handle
	lisp-indent-function and scheme-indent-function in addition to the
	deprecated lisp-indent-hook.

2008-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/xesam.el (top): Require `wid-edit' always.
	(xesam-mode-line, xesam-highlight): New deffaces.
	(xesam-objects): New local variable.
	(xesam-search-engines): Fix error in field list.
	(xesam-mode): Use `xesam-mode-line' instead of
	`font-lock-type-face'.  Apply `xesam-mode' to a temp buffer, for
	proper initiatilzaion (why?).
	(xesam-highlight-string, xesam-get-hits)
	(xesam-kill-buffer-function): New defuns.
	(xesam-refresh-entry): Move code to `xesam-get-hits'.  Check
	result of "hit.fields", it isn't a string only.  Wrap an error of
	the strigi search engine ("xesam:size" is returned as string).
	Highlight search items.
	(xesam-refresh-search-buffer): Make logic of counters more simple.
	Prefetch next hits.
	(xesam-signal-handler): Use `xesam-mode-line' instead of
	`font-lock-type-face'.
	(xesam-new-search): Add `xesam-kill-buffer-function' to
	`kill-buffer-hook'.

2008-08-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* add-log.el (change-log-next-error, change-log-mode): Add support
	for `next-error' to call `change-log-goto-source' on named files
	in a ChangeLog.

2008-08-05  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc.el (math-read-number): Handle all C-like languages
	properly.

2008-08-04  Vincent Belaïche  <vincent.b.1@hotmail.fr>

	* calc/calc.el (math-read-number): Handle C numbers beginning with
	0 correctly.

2008-07-27  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* term/ns-win.el ([ns-new-frame]): New global key.
